--- a/Assembler/Description
+++ b/Assembler/Description
@@ -1,1 +1,2 @@
-
+Writing the program  that translates code written in a symbolic machine language into code written in binary machine
+language - "Assembler".
